# Demand-Intelligence-Engine-for-Bike-Share-Logistics

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_diagnostics.py
configs/station_level/: config.yaml
configs/system_level/: config.yaml
contracts/system_level/: forecasting_contract.md
diagnosis/: README.md  __init__.py
diagnosis/station_level/: README.md
diagnosis/station_level_analysis/: README.md  __init__.py  analysis_insights.md  build_station_summary.py
diagnosis/system_level/: README.md
diagnosis/system_level_analysis/: README.md  analysis_insights.md
docs/: architecture.md  repo_structure.md
docs/system_level/: README_system_level.md  current_pipeline_health.md  diagnostics_summary.md  evaluation_plan.md  model_selection.md
forecasts/: forecasting_plan.md
forecasts/station_level/: README.md
forecasts/system_level/: README.md  forecasting_contract.md
scripts/dashboard/: run_dashboard.py
scripts/station_level/: README.md
scripts/system_level/: README.md  backtest.py  build_external_features.py  build_features.py  build_time_index_and_target.py  evaluate.py  run_system_level_pipeline.py  train_baselines.py  train_classical.py  train_ml.py
sql/legacy/: README.md
sql/warehouse/: README.md
src/: SOURCES.txt
src/dashboard/: __init__.py  actions.py  app.py  components.py  data.py  editor.py  sections.py
src/forecasting_diagnostics/: __init__.py  anomalies.py  autocorrelation.py  config.py  (+9 more)
station_level_analysis/: __init__.py  build_station_summary.py  categorize_stations.py  config.py  summary_features.py  utils.py
(+228 files in other folders)
